@@ -843,8 +843,12 @@ class MainWindow(QtWidgets.QMainWindow, Ui_MainWindow):
 
     def close_gui(self):
         logging.info('gui - mainwindow.py - MainWindow - close_gui')
-        for thread in self.ds18b20_data_threads + self.bme280_data_threads:
-            thread.stop()
+        if self.ds18b20_data_threads is not None:
+            for thread in self.ds18b20_data_threads:
+                thread.stop()
+        if self.bme280_data_threads is not None:
+            for thread in self.bme280_data_threads:
+                thread.stop()
         if self.collect_mqtt_data_thread is not None:
             for thread in self.collect_mqtt_data_thread:
                 try:
